# api/ambulance-wl.openapi.yaml
@@ -14,6 +14,8 @@ info:
 tags:
   - name: ambulanceWaitingList
     description: Ambulance Waiting List API
+  - name: ambulanceConditions
+    description: Patient conditions and symptoms handled in the ambulance
 
 paths:
   '/waiting-list/{ambulanceId}/entries':
@@ -44,6 +46,180 @@ paths:
                   $ref: '#/components/examples/WaitingListEntriesExample'
         '404':
           description: Ambulance with such ID does not exist
+    post:
+      tags:
+        - ambulanceWaitingList
+      summary: Saves new entry into waiting list
+      operationId: createWaitingListEntry
+      description: Use this method to store new entry into the waiting list.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WaitingListEntry'
+            examples:
+              request-sample:
+                $ref: '#/components/examples/WaitingListEntryExample'
+        description: Waiting list entry to store
+        required: true
+      responses:
+        '200':
+          description: >-
+            Value of the waiting list entry with re-computed estimated time of
+            ambulance entry
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WaitingListEntry'
+              examples:
+                updated-response:
+                  $ref: '#/components/examples/WaitingListEntryExample'
+        '400':
+          description: Missing mandatory properties of input object.
+        '404':
+          description: Ambulance with such ID does not exists
+        '409':
+          description: Entry with the specified id already exists
+  '/waiting-list/{ambulanceId}/entries/{entryId}':
+    get:
+      tags:
+        - ambulanceWaitingList
+      summary: Provides details about waiting list entry
+      operationId: getWaitingListEntry
+      description: >-
+        By using ambulanceId and entryId you can details of particular entry
+        item ambulance.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: entryId
+          description: pass the id of the particular entry in the waiting list
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: value of the waiting list entries
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WaitingListEntry'
+              examples:
+                response:
+                  $ref: '#/components/examples/WaitingListEntryExample'
+        '404':
+          description: Ambulance or Entry with such ID does not exists
+    put:
+      tags:
+        - ambulanceWaitingList
+      summary: Updates specific entry
+      operationId: updateWaitingListEntry
+      description: Use this method to update content of the waiting list entry.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: entryId
+          description: pass the id of the particular entry in the waiting list
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WaitingListEntry'
+            examples:
+              request:
+                $ref: '#/components/examples/WaitingListEntryExample'
+        description: Waiting list entry to update
+        required: true
+      responses:
+        '200':
+          description: >-
+            value of the waiting list entry with re-computed estimated time of
+            ambulance entry
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WaitingListEntry'
+              examples:
+                response:
+                  $ref: '#/components/examples/WaitingListEntryExample'
+        '403':
+          description: >-
+            Value of the entryID and the data id is mismatching. Details are
+            provided in the response body.
+        '404':
+          description: Ambulance or Entry with such ID does not exists
+    delete:
+      tags:
+        - ambulanceWaitingList
+      summary: Deletes specific entry
+      operationId: deleteWaitingListEntry
+      description: Use this method to delete the specific entry from the waiting list.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: entryId
+          description: pass the id of the particular entry in the waiting list
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Item deleted
+        '404':
+          description: Ambulance or Entry with such ID does not exists
+  '/waiting-list/{ambulanceId}/condition':
+    get:
+      tags:
+        - ambulanceConditions
+      summary: Provides the list of conditions associated with ambulance
+      operationId: getConditions
+      description: By using ambulanceId you get list of predefined conditions
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: value of the predefined conditions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Condition'
+              examples:
+                response:
+                  $ref: '#/components/examples/ConditionsListExample'
+        '404':
+          description: Ambulance with such ID does not exists
 
 components:
   schemas:
@@ -156,3 +332,25 @@ components:
             value: Nevoľnosť
             code: nausea
             reference: 'https://zdravoteka.sk/priznaky/nevolnost/'
+    ConditionsListExample:
+      summary: Sample of GP ambulance conditions
+      description: |
+        Example list of possible conditions, symptoms, and visit reasons
+      value:
+        - value: Teploty
+          code: subfebrilia
+          reference: 'https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/'
+          typicalDurationMinutes: 20
+        - value: Nevoľnosť
+          code: nausea
+          reference: 'https://zdravoteka.sk/priznaky/nevolnost/'
+          typicalDurationMinutes: 45
+        - value: Kontrola
+          code: followup
+          typicalDurationMinutes: 15
+        - value: Administratívny úkon
+          code: administration
+          typicalDurationMinutes: 10
+        - value: Odber krvi
+          code: blood-test
+          typicalDurationMinutes: 10
